Fixed Horizontal Scrolling from all resolution

--- a/my-app/src/components/About/About.css
+++ b/my-app/src/components/About/About.css
@@ -55,7 +55,6 @@
 @media screen and (min-width: 1060px) and (max-width: 1130px) {
   .about__img {
     max-width: 400px;
-    width: 100%;
     height: 400px;
   }
 }
@@ -63,12 +62,11 @@
 @media screen and (min-width: 981px) and (max-width: 1060px) {
   .about__img {
     max-width: 325px;
-    width: 100%;
     height: 325px;
   }
 }
 
-@media screen and (min-width: 429px) and (max-width: 980px) {
+@media screen and (min-width: 601px) and (max-width: 980px) {
   .about {
     justify-content: center;
   }
@@ -95,7 +93,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 428px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
   .about {
     padding: 0;
     display: flex;
