--- a/my-app/src/components/Footer/Footer.css
+++ b/my-app/src/components/Footer/Footer.css
@@ -1,10 +1,11 @@
 .footer {
   display: flex;
-  max-width: calc(100% - 2 * 104px);
   margin: 0 auto;
   justify-content: space-between;
   align-content: center;
-  padding: 26px 0;
+  padding: 0;
+  padding-left: 26px;
+  padding-right: 26px;
 }
 
 .footer__copywrite {
@@ -42,7 +43,7 @@
   padding-left: 20px;
 }
 
-@media screen and(min-width:429px) and (max-width: 848px) {
+@media screen and(min-width:429px) and (max-width: 980px) {
   .footer__copywrite {
     margin-left: 40px;
   }
@@ -58,7 +59,7 @@
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 428px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
   .footer {
     display: grid;
     grid-template-areas:
